[package]
name = "remouse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = { version = "4.2.1", features = ["openssl"] }
bstr = "1.0.1"
env_logger = "0.10.0"
hmac = "0.12.1"
jwt = "0.16.0"
openssl = "0.10.43"
pam = "0.7.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
sha2 = "0.10.6"
xdotool = "0.0.2"
